<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="4dp">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trip_title_label" />

            <EditText
                android:id="@+id/trip_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trip_title_hint"
                android:minHeight="48dp"
                android:inputType="textAutoCorrect" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/trip_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:scaleType="centerInside" />
            <ImageButton
                android:id="@+id/trip_image_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"/>
        </LinearLayout>

    </LinearLayout>



    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trip_destination_label" />

    <EditText
        android:id="@+id/trip_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trip_destination_hint"
        android:minHeight="48dp"
        android:inputType="textAutoCorrect" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trip_duration_label" />

    <EditText
        android:id="@+id/trip_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trip_duration_hint"
        android:minHeight="48dp"
        android:inputType="textAutoCorrect" />

    <Button
        android:id="@+id/trip_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Placeholder date" />

    <Button
        android:id="@+id/trip_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trip_share_label" />

</LinearLayout>
</ScrollView>